gitops/apps/donation-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: donation-service
  namespace: donation-service
  labels:
    app: donation-service
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: donation-service
  template:
    metadata:
      labels:
        app: donation-service
        tier: backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: donation-service
          image: 987168675043.dkr.ecr.us-east-1.amazonaws.com/solidarytech/donation-service:dc30142d4cd88819cc4d11a0455c5570261ba423
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
