gitops/apps/donation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: donation-service
  namespace: donation-service
spec:
  type: ClusterIP
  selector:
    app: donation-service
  ports:
    - port: 8004
      targetPort: 8004
      protocol: TCP
